--- a/config/orcid.yml
+++ b/config/orcid.yml
@@ -14,3 +14,10 @@ development:
   client_id: <%= ENV["ORCID_KEY"] %>
   client_secret: <%= ENV["ORCID_SECRET"] %>
 
+test:
+  site: http://0.0.0.0:3000
+  authorize_url: https://orcid.org/oauth/authorize
+  token_url: https://pub.orcid.org/oauth/token
+  client_id: 
+  client_secret: 
+
