--- a/config/orcid.yml
+++ b/config/orcid.yml
@@ -1,7 +1,7 @@
 # Default endpoint URLs for the ORCID OAuth API
 
 production:
-  site: http://theoj.herokuapp.com
+  site: http://beta.theoj.org
   authorize_url: http://orcid.org/oauth/authorize#show_login
   token_url: http://pub.orcid.org/oauth/token
   client_id: <%= ENV["ORCID_KEY"] %>
