--- a/config/orcid.yml
+++ b/config/orcid.yml
@@ -8,7 +8,7 @@ production:
   client_secret: <%= ENV["ORCID_SECRET"] %>
 
 development:
-  site: http://0.0.0.0:3000
+  site: <%= ENV["ORCID_HOSTNAME" || 'http://0.0.0.0:3000' ] %>
   authorize_url: http://orcid.org/oauth/authorize#show_login
   token_url: http://pub.orcid.org/oauth/token
   client_id: <%= ENV["ORCID_KEY"] %>
